--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^12.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-scripts": "^5.0.1",
     "smooth-scroll": "^16.1.3"
   },
